- add ZMDatabase::getConfig() to allow to retreive the db configuration
- add ZMDbUtils::resolveSQLFilename(..) to allow loading of DB driver specific
  SQL from files following the convention [name]-[driver].sql; example:
	install-mysql.sql
- fix SQL patch spelling mistake that breaks installing ZenMagick SQL; b:#2487507
- fix broken ZMProducts::getProductForModel(); b:#2487519

Release 0.9.4
- prepend log messages with log level labels
- change ZMCache signature; updated all cache using plugnis!
- fix zm_site_switch: sql created different column than code expects! b:#2384579
- use configured themeId to lookup static contents and boxes layout info;
  [this will make a difference only if the theme id is explicitely set using
	ZMRuntime::seThemeId(...)]
- decouple cache type from actual implementation
- add memcache cache provider
- make group text clickable in cache admin
- fix missing review sidebox image; b:#2384599
- fix b:#2387935; display configured site switch data
- more define/const refactoring
- make zm_page_stats create valid HTML/XHTML
- add ZMPlugin::getConfigPath() to allow plugins to store user/config data in
  a separate area
- try to ber good with file permissions
- add Salemaker service
- get a bit further with rebuilding the price lookup code
- create theme dummy for ZenMagick default theme
- add xcache based cache provider
- move resolveZCClass from ZMLoader to ZMTools
- update copyright / author note of pure ZenMagick files (not complete)
- create and use new plugin loader policy constants
- refactor setting downloadOrderStatusList to downloadOrderStatusRange
- deprecate ZM_FILENAME_xxx defines
- deprecate ZM_ADMINFN_xxx defines
- retire ZM_THEME_xxx defines
- show PayPal Express Checkout button on shopping cart; b:#2415830
- deprecate ZM_DB_xxx defines except for ZM_DB_PREFIX
- fix broken zm_product_resultlist() function (drives the products list in
  CatalogManager)
- replace rating star images with contributed from